syntax = "proto3";

package pb;
option go_package = "github.com/vbph/bank/pb";

import "google/protobuf/timestamp.proto";

message TokenRes {
  string token = 1;
  google.protobuf.Timestamp expired_at = 2;
}
